--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
     post_build:
         commands:
         - echo Build completed on `date`
-        - aws s3 sync .build/ s3://shiftemotionwebapp.com/
+        - aws s3 sync build/ s3://shiftemotionwebapp.com/
 artifacts:
     files:
         - "**/*"
