--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "filepond": "^4.18.0",
+    "filepond-plugin-image-preview": "^4.6.4",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-filepond": "^7.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
