--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "create-temp-file": "^2.0.0",
     "filepond": "^4.18.0",
+    "filepond-plugin-file-encode": "^2.1.6",
     "filepond-plugin-image-preview": "^4.6.4",
+    "flare-react": "^1.0.7",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
     "react-filepond": "^7.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "temp-write": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
